<resources>
    <string name="app_name">ProjetoFinal</string>
    <string name="title_utilizadores">Utilizadores</string>
    <string name="title_carros">Carros</string>
    <string name="title_tipo_despesa">Tipos de Despesas</string>
    <string name="title_despesas">Despesas</string>
    <string name="title_estatistica">Estatistica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inserir_novo_utilizador">Inserir Novo Utilizador</string>
    <string name="inserir_novo_carro">Inserir Novo Carro</string>
    <string name="inserir_tipo_despesa">Inserir Tipo De Despesa</string>
    <string name="inserir_despesa">Inserir Nova Despesa</string>
    <string name="eliminar_utilizador">Eliminar Utilizador</string>
    <string name="Nome_da_Despesa">Nome da Despesa</string>
    <string name="inserir">Inserir</string>
    <string name="selecione_tipo_despesa">Selecione um tipo de despesa</string>
    <string name="data_despesa">Data da despesa</string>
    <string name="valor_despesa">Valor da despesa</string>
    <string name="selecionar_carro">Selecione o carro</string>
    <string name="nome">Nome:</string>
    <string name="aviso_digite_nome">Por favor preencha o campo</string>
    <string name="aviso_apenas_letras">Por favor digite apenas letras</string>
    <string name="sucesso_inserir_utilizador">Inserido com sucesso.</string>
    <string name="falha_inserir_utilizador">Erro ao inserir</string>
    <string name="insucesso_eliminar">Erro ao eliminar</string>
    <string name="sucesso_eliminar">Eliminado com sucesso</string>
    <string name="eliminar_tipo_despesa">Eliminar Tipo de Despesa</string>
    <string name="request_utilizador">Por favor selecione um utilizador</string>
    <string name="request_carro">Por favor selecione um carro</string>
</resources>