<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_utilizadores"
        android:icon="@drawable/ic_people_24"
        android:title="@string/title_utilizadores" />

    <item
        android:id="@+id/navigation_carros"
        android:icon="@drawable/ic_car_24"
        android:title="@string/title_carros" />

    <item
        android:id="@+id/navigation_tipo_despesa"
        android:icon="@drawable/ic_euro_24"
        android:title="@string/title_tipo_despesa" />

    <item
        android:id="@+id/navigation_despesas"
        android:icon="@drawable/ic_format_list_24"
        android:title="@string/title_despesas" />

    <item
        android:id="@+id/navigation_estatistica"
        android:icon="@drawable/ic_format_list_24"
        android:title="@string/title_estatistica" />

</menu>